# motor_control

./: .gitignore  LICENSE  README.md
Docs/: 6StepTestAnglesTable.md  EnergisingwithSVPWMvsMeasuredAngles.nd  I2C1_SCL_Options  MotorCablesOrderings.md  MotorControlDocumentation.md  MotorControlHWDocumentation.md  TODO.md  documentation.md  stackExchangeLinks.md
Python_visualisation/: plot.py  plotter.py
Software/: readme.md
Software/1Motor/: CMakeLists.txt  CMakeListsPrivate.txt  platformio.ini
Software/1Motor/include/: FOC.h  Foc.h
Software/1Motor/src/: FOC.cpp  Foc.cpp  dma_spi.cpp  main.cpp
Software/1Motor_refactor/: .gitignore  CMakeLists.txt  README.md  platformio.ini
Software/2Motor/: CMakeLists.txt  platformio.ini
Software/2Motor/include/: FOC.h  (+1 more)
hardware/: HardwareRevisionNotes
hardware/1MotorShield/: 1M_board.sch  readme.md
hardware/2MotorShield/: 2MS.brd  2MS.sch
hardware/EAGLE/: Readme.md
hardware/RotaryEncoder/: AS5147.sch  AS5157.brd
hardware/SingleMotorShield-v1.0/: eagle.epf
hardware/SingleMotorShield-v2.0/: 1M_board.b#1  1M_board.b#2  1M_board.b#3  1M_board.brd  1M_board.pro  1M_board.s#2  1M_board_00.job  1M_board_01.job  1M_board_02.job  1M_board_03.job  1M_board_04.job
software/: readme.md
software/1Motor_refactor/: CMakeListsPrivate.txt
software/2Motor/: CMakeListsPrivate.txt
software/motor_driver/: .gitignore  CMakeLists.txt  platformio.ini
software/tuw_joy_to_serial/: CMakeLists.txt  package.xml
software/utilities/SVPWM_Implementations/: CMakeLists.txt  main.cpp  matplotlibcpp.h  print_arrays.hpp  readme.md
(+122 files in other folders)
